--- a/Css/work1-lap.css
+++ b/Css/work1-lap.css
@@ -7,6 +7,9 @@ rgb(167, 111, 111)
 
 /* 平板桌機介面 */
 @media screen and (min-width:1025px) {
+    .midImg1{
+        background-size: cover;
+    }
     .card{
         position: relative;
         width: 350px;
@@ -192,7 +195,6 @@ rgb(167, 111, 111)
     background-attachment:fixed; /* 固定圖像 */
     background-position-x: 0%;
     background-position-y: 0%; /* 圖像置中 */
-    background-size: cover;
 }
 /* 2頁面 */
 .midblock1{
