--- a/Css/work1-phone.css
+++ b/Css/work1-phone.css
@@ -8,12 +8,9 @@
         background-attachment:fixed; /* 固定圖像 */
         background-position-x: 30%;
         background-position-y: 20%; /* 圖像置中 */
-        background-size: cover; 
+        background-size: 200%;
     }
-    .midcolumn .midImg2{
-        display: none;
-  
-    }
+    
     .midcolumns p{
         margin: 50px 100px 0px;
     }
