--- a/Css/work.css
+++ b/Css/work.css
@@ -12,13 +12,12 @@ body{
     }
     .midcolumn .midImg1{
         min-height: 200px; 
-        background-attachment:fixed; /* 固定圖像 */
-        background-position-x: 30%;
-        background-position-y: 20%; /* 圖像置中 */
-        background-size: 200%;
+        background-size: 100%;
+        background-position-y: 100%;
     }
     .midcolumn .midImg2{
-        display: none;
+        min-height: 200px; 
+        background-size: 100%;
   
     }
     .midcolumns p{
@@ -29,9 +28,21 @@ body{
 @media screen and (min-width:1025px) {
     .midImg1{
         background-size: cover;
+        min-height: 400px; 
+        /* 沒內文時可以看到的最小高度 */
+
+        background-attachment:fixed; /* 固定圖像 */
+        background-position-x: 0%;
+        background-position-y: 0%; /* 圖像置中 */
     }
     .midImg2{
         background-size: cover;
+        min-height: 400px; 
+        /* 沒內文時可以看到的最小高度 */
+
+        background-attachment:fixed; /* 固定圖像 */
+        background-position-x: 0%;
+        background-position-y: 0%; /* 圖像置中 */
 
     }    
 }
@@ -77,23 +88,12 @@ body{
 
 .midImg1{
     background-image: url("img/IMG_0000.png");
-    min-height: 400px; 
-    /* 沒內文時可以看到的最小高度 */
-
-    background-attachment:fixed; /* 固定圖像 */
-    background-position-x: 0%;
-    background-position-y: 0%; /* 圖像置中 */
+    
 }
 
 .midImg2{
     background-image: url("img/IMG_0224.png");
-    min-height: 400px; 
-    /* 沒內文時可以看到的最小高度 */
-
-    background-attachment:fixed; /* 固定圖像 */
-    background-position-x: 0%;
-    background-position-y: 0%; /* 圖像置中 */
-
+   
 }
 
 .midcolumn p{
