--- a/Css/work1-phone.css
+++ b/Css/work1-phone.css
@@ -5,12 +5,14 @@
     }
     .midcolumn .midImg1{
         min-height: 200px; 
-        background-attachment:fixed; /* 固定圖像 */
-        background-position-x: 30%;
-        background-position-y: 20%; /* 圖像置中 */
-        background-size: 200%;
+        background-size: 100%;
+        background-position-y: 100%;
     }
-    
+    .midcolumn .midImg2{
+        min-height: 300px; 
+        background-size: 100%;
+  
+    }
     .midcolumns p{
         margin: 50px 100px 0px;
     }
