--- a/Css/Home.css
+++ b/Css/Home.css
@@ -14,25 +14,29 @@
         font-size: 1.2rem;
     }
     .midcolumn p{
-        font-size: 1.2rem;
+        font-size: 1.0rem;
         margin-left: 10px;
         margin-right: 10px;
     }
     .midImg1{
         background-size: 200%;
         min-height: 200px; 
+        background-attachment: fixed;
     }
     .midImg2{
         background-size: 200%;
         min-height: 100px; 
+        background-attachment: fixed;
     }
     .midImg3{
         background-size: 200%;
         min-height: 200px; 
+        background-attachment: fixed;
     }
     .midImg4{
         background-size: 200%;
         min-height: 100px; 
+        background-attachment: fixed;
     }
 
 }
@@ -48,18 +52,22 @@
     }
     .midImg1{
         background-size: 200%;
+        background-attachment: fixed; /* 固定圖像 */
         min-height: 400px; 
     }
     .midImg2{
         background-size: 200%;
+        background-attachment: fixed; /* 固定圖像 */
         min-height: 200px; 
     }
     .midImg3{
         background-size: 200%;
+        background-attachment: fixed; /* 固定圖像 */
         min-height: 400px; 
     }
     .midImg4{
         background-size: 200%;
+        background-attachment: fixed; /* 固定圖像 */
         min-height: 200px; 
     }
     
@@ -76,20 +84,24 @@
     }
     .midImg1{
         background-size: cover;
+        background-attachment: fixed; /* 固定圖像 */
         min-height: 400px; 
     }
     .midImg2{
         background-size: cover;
+        background-attachment: fixed; /* 固定圖像 */
         min-height: 200px; 
 
     }
     .midImg3{
         background-size: cover;
+        background-attachment: fixed; /* 固定圖像 */
         min-height: 400px; 
     }
     
     .midImg4{
         background-size: cover;
+        background-attachment: fixed; /* 固定圖像 */
         min-height: 200px;
     }
 }
@@ -105,39 +117,27 @@
 }
 .midImg1{
     background-image: url("img/IMG_4500.JPEG");
-    
-    /* 沒內文時可以看到的最小高度 */
 
-    background-attachment: fixed; /* 固定圖像 */
     background-position-x: center;
     background-position-y: 0%; /* 圖像置中 */
 	z-index:1;
 }
 .midImg2{
     background-image: url("img/IMG_4500.JPEG");
-    
-    /* 沒內文時可以看到的最小高度 */
 
-    background-attachment: fixed; /* 固定圖像 */
     background-position-x: center;
     background-position-y: 0%; /* 圖像置中 */
 }
 .midImg3{
     background-image: url("img/f2.jpeg");
-    
-    /* 沒內文時可以看到的最小高度 */
 
-    background-attachment: fixed; /* 固定圖像 */
     background-position-x: center;
     background-position-y: 0%; /* 圖像置中 */
 }
 
 .midImg4{
     background-image: url("img/f2.jpeg");
-     
-    /* 沒內文時可以看到的最小高度 */
 
-    background-attachment: fixed; /* 固定圖像 */
     background-position-x: center;
     background-position-y: 0%; /* 圖像置中 */
 }
